# Solarscape

./: .env  .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  devenv.nix  devenv.yaml  license.md  readme.md  rustfmt.toml  schema.sql
.github/: readme.md  renovate.json
.github/workflows/: cargo.yml  rust.yml
backend-types/: Cargo.toml
backend-types/src/: lib.rs
client/: Cargo.toml
client/src/: camera.rs  chunk.rs  chunk.wgsl  chunk_debug.wgsl  client.rs  component.rs  components.rs  connection.rs  data.rs  debug_line.wgsl  gui_test.rs  login.rs  main.rs  object.rs  orbit_camera.rs  player.rs  renderer.rs  sector.rs  shader.wgsl  structure.wgsl  structure_blocks.bbmodel  the_test_cube.wgsl  triangulation_table.rs  types.rs  world.rs
client/src/resources/: structure_blocks.mtl
gateway/: Cargo.toml
gateway/src/: extractors.rs  main.rs  types.rs
gateway/src/endpoints/api/: dev.rs  mod.rs
gateway/src/endpoints/web/: index.html  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 1_Initial.sql  1_Players.sql  2_Items_&_Inventories.sql  2_Tokens.down.sql  2_Tokens.sql  3_Add_Player_Creation_Date.down.sql  3_Add_Player_Creation_Date.sql
sector-server/: Cargo.toml
sector-server/run/: example.conf
sector-server/src/: generation.rs  main.rs  player.rs  sector.rs
server/: Cargo.toml
server/run/: example.conf  server.conf
server/run/sectors/example/: sector.conf  sector.toml
server/src/: chunk.rs  configuration.rs  connection.rs  generation.rs  generator.rs  main.rs  object.rs  player.rs  sector.rs  server.rs  sync.rs  voxel_object.rs  voxject.rs  world.rs
server/src/world/: chunk.rs  mod.rs  sector.rs  voxject.rs
shared/: Cargo.toml
shared/src/: chunk.rs  clientbound.rs  component.rs  components.rs  connection.rs  data.rs  io.rs  lib.rs  messages.rs  physics.rs  protocol.rs  serverbound.rs  structure.rs  triangulation_table.rs  types.rs
shared/src/data/: mod.rs  world.rs
shared/src/message/: backend.rs  clientbound.rs  serverbound.rs
shared/src/messages/: clientbound.rs  serverbound.rs
shared/src/protocol/: clientbound.rs  mod.rs  serverbound.rs
shared/src/types/: mod.rs  world.rs
shared/src/world/: chunk.rs  mod.rs  voxject.rs
