[workspace]
members = ["client", "gateway", "server", "shared"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
solarscape-shared = { path = "shared" }

anyhow = "1"
bincode = "1"
dashmap = "6"
env_logger = "0.11"
log = "0.4"
nalgebra = "0.33"
rayon = "1"
thiserror = "1"

axum = { version = "0.7", default-features = false, features = [ "http1", "http2", "query", "tokio", "macros" ] }
rapier3d = { version = "0.22", features = ["simd-stable"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
opt-level = 1
