[workspace]
members = [ "client", "gateway", "sector-server", "shared" ]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
solarscape-shared = { path = "shared" }

anyhow = "1"
chacha20poly1305 = "0.10"
dashmap = "6"
env_logger = "0.11"
log = "0.4"
rayon = "1"
serde_json = "1"
thiserror = "1"

clap = { version = "4", features = ["cargo", "derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rapier3d = { version = "0.22", features = ["simd-stable"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true

[profile.dev]
opt-level = 1
