[package]
name = "solarscape-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
dashmap.workspace = true
log.workspace = true
rapier3d.workspace = true
rayon.workspace = true
solarscape-shared.workspace = true
thiserror.workspace = true
tokio.workspace = true

nalgebra = { workspace = true, features = ["bytemuck"] }

bytemuck = "1"
futures-util = "0.3"
rand = "0.8"
tokio-tungstenite = "0.24"
tokio-util = "0.7"
winit = "0.30"

wgpu = { version = "22", default-features = false, features = ["wgsl"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "rayon",
] }
