[package]
name = "solarscape-client"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
dashmap.workspace = true
env_logger.workspace = true
log.workspace = true
rapier3d.workspace = true
rayon.workspace = true
serde_json.workspace = true
serde.workspace = true
solarscape-shared.workspace = true
thiserror.workspace = true
tokio.workspace = true

nalgebra = { workspace = true, features = ["bytemuck"] }

bytemuck = "1"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
reqwest = "0.12"
winit = "0.30"

wgpu = { version = "22", default-features = false, features = ["wgsl"] }
image = { version = "0.25", default-features = false, features = ["png", "rayon"] }
