[package]
name = "solarscape-client"
version.workspace = true
edition.workspace = true
publish = false
build = "../build.rs"

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
dashmap.workspace = true
env_logger.workspace = true
log.workspace = true
rapier3d.workspace = true
rayon.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

nalgebra = { workspace = true, features = ["bytemuck"] }
solarscape-shared = { workspace = true, features = ["world"] }

bytemuck = "1"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
reqwest = "0.12"
tobj = "4"
winit = "0.30"

image = { version = "0.25", default-features = false, features = ["png", "rayon"] }
wgpu = { version = "22", default-features = false, features = ["wgsl"] }
