[package]
name = "solarscape-gateway"
version.workspace = true
edition.workspace = true
publish = false
build = "../build.rs"

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

solarscape-shared = { workspace = true, features = ["backend"] }

email_address = "0.2"
itertools = "0.13"

argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "json", "macros", "query", "tokio"] }
