[package]
name = "solarscape-sector-server"
version.workspace = true
edition.workspace = true
publish = false
build = "../build.rs"

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
dashmap.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
rapier3d.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

solarscape-shared = { workspace = true, features = ["backend", "world"] }

futures = "0.3"
hocon = "0.9"
rand = "0.8"
thread-priority = "1"
