[package]
name = "solarscape-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
log.workspace = true
nalgebra.workspace = true
solarscape-shared.workspace = true
thiserror.workspace = true
tokio.workspace = true

serde = { workspace = true, features = ["rc"] }

dashmap = "5"
rand = "0.8"
rayon = "1"

axum = { version = "0.7", default-features = false, features = ["http1", "http2", "query", "ws"] }
