[package]
name = "solarscape-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
dashmap.workspace = true
env_logger.workspace = true
log.workspace = true
nalgebra.workspace = true
rapier3d.workspace = true
rayon.workspace = true
solarscape-shared.workspace = true
thiserror.workspace = true
tokio.workspace = true

serde = { workspace = true, features = ["rc"] }

hocon = "0.9"
rand = "0.8"
thread-priority = "1"

axum = { version = "0.7", default-features = false, features = [
    "http1",
    "http2",
    "query",
    "tokio",
    "ws",
] }
