[package]
name = "solarscape-shared"
version.workspace = true
edition.workspace = true

[dependencies]
solarscape-macros = { path = "../macros" }

async-trait = "=0.1.74"
env_logger = "=0.10.0"

bincode.workspace = true
hecs.workspace = true
log.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
tokio.workspace = true
