[package]
name = "solarscape-shared"
version.workspace = true
edition.workspace = true
publish = false
build = "../build.rs"

[dependencies]
chacha20poly1305.workspace = true
log.workspace = true
nalgebra.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

bincode = "1"
serde_with = "3"
