[package]
name = "solarscape-shared"
version.workspace = true
edition.workspace = true
publish = false
build = "../build.rs"

[dependencies]
chacha20poly1305.workspace = true
log.workspace = true
nalgebra.workspace = true
rustc-hash.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

rapier3d = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

bincode = "1"
serde_with = "3"

time = { version = "0.3", optional = true, features = ["macros"] }

[features]
backend = ["dep:sqlx", "dep:time"]
world = ["dep:rapier3d"]
